syntax = "proto3";

package sonrio.sonr.schema;

import "schema/v1/schema.proto";

option go_package = "github.com/sonr-io/sonr/x/schema/types";
option java_multiple_files = true;
option java_package = "io.sonr.types.schema";

message Document {
  // the DID for this schema should not be populated by request
  string schema_did = 1;

  // The CID of the schema document
  string cid = 2;

  // label for the Document
  string label = 3;

  // the properties of this schemadocument
  repeated SchemaDocumentValue fields = 4;
}


message BoolValue {
    bool value = 1;
}

message StringValue {
    string value = 1;
}

message IntValue {
    int32 value = 1;
}

message FloatValue {
    double value = 1;
}

message BytesValue {
    bytes value = 1;
}

message LinkValue {
    Document value = 1;
}

message ListValue {
    repeated DocumentValue value = 1;
}


message DocumentValue {
    // The key of the document value
    string key = 1;

    // Type of a single schema property
    Kind kind = 2;

    // The value of the field
    BoolValue bool_value = 3; // optional
    StringValue string_value = 4; // optional
    IntValue int_value = 5; // optional
    FloatValue float_value = 6; // optional
    BytesValue bytes_value = 7; // optional
    LinkValue link_value = 8; // optional
    ListValue list_value = 9; // optional
}
