syntax = "proto3";

package sonrio.sonr.schema;

option go_package = "github.com/sonr-io/sonr/x/schema/types";

// Schema defines the shapes of schemas on Sonr
message SchemaReference {
  // the DID for this schema
  string did = 1;

  // an alternative reference point
  string label = 2;

  // a reference to information stored within an IPFS node.
  string cid = 3;
}

message SchemaDefinition {
  // the DID for this schema
  string creator = 1;

  // an alternative reference point
  string label = 2;

  // the properties of this schema
  map<string, SchemaKind> fields = 3;
}

// Represents the types of fields a schema can have
enum SchemaKind {
  INVALID = 0;
  MAP = 1;
  LIST = 2;
  UNIT = 3;
  BOOL = 4;
  INT = 5;
  FLOAT = 6;
  STRING = 7;
  BYTES = 8;
  LINK = 9;
  STRUCT = 10;
  UNION = 11;
  ENUM = 12;
  ANY = 13;
}
